# netlib

./: README.md  netlib.sln  vcpkg.json
docs/superpowers/plans/: 2026-06-08-tcpserver-high-concurrency-plan.md
docs/superpowers/specs/: 2026-06-08-tcpserver-high-concurrency-design.md
kcpclient/: kcpclient.cpp  kcpclient.vcxproj  kcpclient.vcxproj.filters
kcpserver/: kcpserver.cpp  kcpserver.vcxproj  kcpserver.vcxproj.filters
tcpclient/: tcpclient.cpp  tcpclient.vcxproj
tcpserver/: CMakeLists.txt  README.md  application.cpp  application.h  middleware.h  readme.txt  server.cpp  server.h  service.cpp  service.h  session.cpp  session.h  shared_frame_pool.h  tcpserver.cpp  tcpserver.h  tcpserver.vcxproj  tcpserver.vcxproj.filters  vcpkg.json  work_queue.h
tcpserver/core/: buffer_pool.h  config.h  protocol.h  server.cpp  server.h  session.cpp  session.h  shared_frame_pool.h  work_queue.h
tcpserver/examples/chat/: chat_service.cpp  chat_service.h
tcpserver/examples/dispatcher/: dispatcher_service.cpp  dispatcher_service.h
tcpserver/examples/echo/: echo_service.cpp  echo_service.h
tcpserver/examples/http/: http_service.cpp  http_service.h
tcpserver/framework/: application.cpp  application.h  dispatcher.h  service.cpp  service.h
tcpserver/framework/codec/: codec.h  length_prefixed.h  raw_codec.h
tcpserver/framework/middleware/: connection_limiter.h
tcpserver/middleware/: access_log.h  rate_limiter.h
tools/tcpbench/: go.mod
tools/tcpbench/cmd/client/: main.go
tools/tcpbench/cmd/server/: main.go
tools/tcpbench/pkg/protocol/: protocol.go
udpclient/: udpclient.cpp  udpclient.vcxproj  udpclient.vcxproj.filters
udpserver/: udpserver.cpp  udpserver.vcxproj  udpserver.vcxproj.filters
